@@ -4,6 +4,8 @@ ver 1.5.6 (09/25/2007)
  Fixed: 	Fixed header hiding option in MSIE
  Fixed: 	Fixed IDs renaming in MSIE (JS object content type case)
  Fixed: 	Odd MSIE bug fixed with displaying forms on second modalbox calls
+ Fixed: 	Added makePositioned to fix MSIE display issues with variable height
+ Fixed: 	Added a workaround for content flicker in Firefox 
 
 ver 1.5.5.1 (09/21/2007)
  Added: 	If title options is set to 'false' the Modalbox header will not shown
